# huntova-public

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  PRIVACY.md  README.md  RELEASE-v0.1.0a10.md  RELEASE-v0.1.0a100.md  RELEASE-v0.1.0a101.md  RELEASE-v0.1.0a102.md  RELEASE-v0.1.0a103.md  RELEASE-v0.1.0a104.md  RELEASE-v0.1.0a105.md  RELEASE-v0.1.0a106.md  RELEASE-v0.1.0a107.md  RELEASE-v0.1.0a108.md  RELEASE-v0.1.0a109.md  RELEASE-v0.1.0a11.md  RELEASE-v0.1.0a1120.md  RELEASE-v0.1.0a16.md  RELEASE-v0.1.0a17.md  RELEASE-v0.1.0a18.md  RELEASE-v0.1.0a19.md  RELEASE-v0.1.0a20.md  RELEASE-v0.1.0a21.md  RELEASE-v0.1.0a22.md  RELEASE-v0.1.0a23.md  RELEASE-v0.1.0a24.md  RELEASE-v0.1.0a245.md  RELEASE-v0.1.0a25.md  RELEASE-v0.1.0a26.md  RELEASE-v0.1.0a27.md  RELEASE-v0.1.0a28.md  RELEASE-v0.1.0a29.md  RELEASE-v0.1.0a3.md  RELEASE-v0.1.0a30.md  RELEASE-v0.1.0a31.md  RELEASE-v0.1.0a32.md  RELEASE-v0.1.0a33.md  (+112 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: CHAT.md  CONFIG.md  ERROR_CODES.md  INSTALL.md  LAUNCH.md  ONBOARDING.md  PLUGINS.md  TROUBLESHOOTING.md
docs/plugin-registry/: README.md  registry.json
docs/workflows/: README.md  pre-launch-smoke.yml  publish.yml  smoke.yml
searxng/: Dockerfile  settings.yml
static/: app.js  install.sh  landing.js  style.css
templates/: account.html  admin.html  download.html  index.html  jarvis.html  landing.html  setup.html  try.html
tests/: conftest.py  test_adjacent_endpoints_http_method_enforcement.py  test_admin_ops_http_method_enforcement.py  test_admin_wizard_reset_epoch.py  test_agent_control_body_byte_cap.py  test_agent_loop_settings_caching.py  test_agent_resume_dna_gate.py  test_agent_runner_state_audit.py  test_agent_start_dna_gate.py  test_agent_start_dna_state_enum.py  test_api_chat_hardening.py  test_api_leads_response_shape_contract.py  test_atomic_write_audit.py  test_atomic_write_fsyncs.py  test_auth_cookie_secure_flag_audit.py  test_auth_dep_required_audit.py  test_auth_lockout.py  test_auth_token_audit.py  test_brain_overlay_falsy_preserves_raw.py  test_brain_prod7_concurrency_replay_safety.py  test_brain_queries_string_examples.py  test_build_ai_context_shape.py  test_chat_attachment_race.py  test_chat_delete_intent_check.py  test_chat_mint_share_intent_check.py  test_chat_playbook_install_intent_check.py  test_chat_research_intent_check.py  test_chat_sequence_run_intent_check.py  test_chat_set_lead_status_intent_check.py  test_classify_archetype_shape.py  test_classify_url_audit.py  test_cli.py  test_cli_approve_audit.py  test_cli_argparse_ux.py  test_cli_benchmark_audit.py  test_cli_deliverability_audit.py  test_cli_inbox_audit.py  test_cli_logs_audit.py  test_cli_memory_audit.py  test_cli_migrate_audit.py  (+183 more)
tools/: smoke_test_local.py
