[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huntova"
version = "0.1.0a1"
description = "Local-first lead-gen super-tool. Run an AI agent on your terminal, bring your own API key."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Enzo Strano" }]
keywords = ["lead-generation", "agent", "byok", "cli", "sales", "outbound"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]

# Dependencies live in requirements.txt for now; this list is the
# pipx-install superset. Pinned loosely so we don't fight the user's
# global env. Phase 2 trims optional cloud-only deps.
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "bcrypt>=4.1.0",
    "openai>=1.6.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "itsdangerous>=2.1.0",
    # Local-CLI defaults — secret storage backends. keyring + cryptography
    # are small enough to ship in the base wheel so the install Just Works
    # without users having to know about extras. The store falls back
    # gracefully when either is missing.
    "keyring>=24.0",
    "cryptography>=42.0",
    # Polished TUI for the onboard wizard. questionary uses prompt_toolkit
    # under the hood; arrow-key select / password input / confirm. Falls
    # back to plain input() when stdin isn't a TTY so scripts still work.
    "questionary>=2.0.0",
    # Postgres only on non-Windows by default (pip wheels on Windows are
    # spotty for psycopg2-binary; cloud users on Windows can pip install
    # it explicitly).
    "psycopg2-binary>=2.9.0; platform_system != 'Windows'",
]

[project.optional-dependencies]
# Anthropic Claude support — users picking the Anthropic provider
# will pip install huntova[anthropic] (the SDK is heavier).
anthropic = ["anthropic>=0.30"]
# Browser automation for the deep-qualify pass. Optional because
# Playwright is multi-hundred-MB to install (Chromium binary).
browser = ["playwright>=1.40"]
# Cloud-mode deps (Stripe extras, etc.) for users running the
# legacy hosted shape. Empty for now since Stripe is in the base wheel.
cloud = []

[project.scripts]
huntova = "cli:main"

[project.urls]
Homepage = "https://huntova.com"
Source = "https://github.com/enzostrano/huntova"
Issues = "https://github.com/enzostrano/huntova/issues"

[tool.setuptools]
# Single-file modules until we move into a package layout.
py-modules = [
    "cli", "runtime", "config", "auth", "db", "db_driver",
    "policy", "providers", "secrets_store", "plugins",
    "bundled_plugins",
    "server", "app", "agent_runner", "user_context",
    "payments", "email_service",
    # New for v0.1.0a2: TUI primitives + daemon installer
    "tui", "huntova_daemon",
]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["templates/*.html", "static/**/*", "searxng/**/*"]
