[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huntova"
version = "0.1.0a186"
description = "Local-first lead-gen super-tool. Run an AI agent on your terminal, bring your own API key."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Enzo Strano" }]
keywords = ["lead-generation", "agent", "byok", "cli", "sales", "outbound"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]

# Dependencies live in requirements.txt for now; this list is the
# pipx-install superset. Pinned loosely so we don't fight the user's
# global env. Phase 2 trims optional cloud-only deps.
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "bcrypt>=4.1.0",
    "openai>=1.6.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "itsdangerous>=2.1.0",
    # Local-CLI defaults — secret storage backends. keyring + cryptography
    # are small enough to ship in the base wheel so the install Just Works
    # without users having to know about extras. The store falls back
    # gracefully when either is missing.
    "keyring>=24.0",
    "cryptography>=42.0",
    # Polished TUI for the onboard wizard. questionary uses prompt_toolkit
    # under the hood; arrow-key select / password input / confirm. Falls
    # back to plain input() when stdin isn't a TTY so scripts still work.
    "questionary>=2.0.0",
    # Anthropic SDK is now the default provider — must ship in the base
    # wheel. Gemini + OpenAI use the openai SDK already in deps.
    "anthropic>=0.30",
    # DNS lookups for `huntova doctor --email` (SPF/DKIM/DMARC/MX).
    # ~150 KB pure-Python; cheaper to bundle than to make users
    # `pip install dnspython` after install.
    "dnspython>=2.4",
    # Postgres only on non-Windows by default (pip wheels on Windows are
    # spotty for psycopg2-binary; cloud users on Windows can pip install
    # it explicitly).
    "psycopg2-binary>=2.9.0; platform_system != 'Windows'",
]

[project.optional-dependencies]
# Anthropic Claude support — users picking the Anthropic provider
# will pip install huntova[anthropic] (the SDK is heavier).
anthropic = ["anthropic>=0.30"]
# Browser automation for the deep-qualify pass. Optional because
# Playwright is multi-hundred-MB to install (Chromium binary).
browser = ["playwright>=1.40"]
# Cloud-mode deps (Stripe extras, etc.) for users running the
# legacy hosted shape. Empty for now since Stripe is in the base wheel.
cloud = []
# Deliverability pre-flight is now in base deps (a124). This extra
# kept as a no-op alias so `pip install huntova[deliverability]`
# from old docs still works.
deliverability = ["dnspython>=2.4"]

[project.scripts]
huntova = "cli:main"

[project.urls]
Homepage = "https://huntova.com"
Source = "https://github.com/enzostrano/huntova-public"
Issues = "https://github.com/enzostrano/huntova-public/issues"
Documentation = "https://github.com/enzostrano/huntova-public/tree/main/docs"
Changelog = "https://github.com/enzostrano/huntova-public/releases"

[tool.setuptools]
# Single-file modules until we move into a package layout.
py-modules = [
    "cli", "runtime", "config", "auth", "db", "db_driver",
    "policy", "providers", "secrets_store", "plugins",
    "bundled_plugins",
    "server", "app", "agent_runner", "user_context",
    "payments", "email_service",
    # v0.1.0a2: TUI primitives + daemon installer
    "tui", "huntova_daemon",
    # v0.1.0a4: memory subcommand bundle
    "cli_memory",
    # v0.1.0a5: migrate (CSV import from Apollo / Clay / Hunter / generic)
    "cli_migrate",
    # v0.1.0a6: approve queue (manual approval before email send)
    "cli_approve",
    # v0.1.0a8: unified logs viewer (tail / hunt <id> / daemon / filter)
    "cli_logs",
    # v0.1.0a9: synthetic-hunt provider quality benchmark (no quota burn)
    "cli_benchmark",
    # v0.1.0a11: guided "teach the agent" feedback flow
    "cli_teach",
    # v0.1.0a112: IMAP reply detection — `huntova inbox watch`
    "cli_inbox",
    # v0.1.0a113: 3-step follow-up cadence — `huntova sequence run`
    "cli_sequence",
    # v0.1.0a114: deliverability pre-flight — `huntova doctor --email`
    "cli_deliverability",
    # v0.1.0a122: self-coaching pulse summary — `huntova pulse`
    "cli_pulse",
    # v0.1.0a128: scheduled-job snippet emitter — `huntova schedule print`
    "cli_schedule",
    # v0.1.0a186: Telegram bot bridge — `huntova remote start`
    "cli_remote",
]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["templates/*.html", "static/**/*", "searxng/**/*"]
